force-app/main/default/objects/Approval_Sync_Failure__c/Approval_Sync_Failure__c.object-meta.xml
<CustomObject>
    <description>Logs failed Approval__c -&gt; Supabase sync attempts after retries are exhausted. Used for manual replay and ops visibility.</description>
    <label>Approval Sync Failure</label>
    <nameField>
        <displayFormat>ASF-{0000}</displayFormat>
        <label>Failure ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Sync Failures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>