force-app/main/default/objects/Approval_Sync_Failure__c/fields/Attempt__c.field-meta.xml
<CustomField>
    <fullName>Attempt__c</fullName>
    <description>Which retry attempt this row was logged from (1 = first try, MAX_ATTEMPTS = final).</description>
    <label>Attempt</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>