force-app/main/default/objects/Approval_Sync_Failure__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description>UPSERT or DELETE — matches what was sent to Supabase.</description>
    <label>Change Type</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>