force-app/main/default/objects/Approval_Sync_Failure__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>HTTP status + body, or exception type + message.</description>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>