force-app/main/default/objects/Approval_Sync_Failure__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>The JSON event payload that failed to sync — useful for manual replay.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>