force-app/main/default/objects/Approval_Sync_Failure__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The 18-character Approval__c Id whose sync failed.</description>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>